# esp32c3-imu

./: CMakeLists.txt  README.md  gtest.py  i2c_init_test.sh  mag_quality_check.c  partitions.csv  release.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  stress_test_session.txt
components/imu/: CMakeLists.txt  accel_calibration.c  accel_calibration.h  gyro_calibration.h  hmc5983.c  hmc5983.h  imu.c  imu.h  imu_common.h  imu_util.h  madgwick.c  madgwick.h  mag_calibration.c  mag_calibration.h  mag_quality_check.c  mag_quality_check.h  mahony.c  mahony.h  math_helper.h  mpu6500.c  mpu6500.h  mpu6500_spi.c  mpu6500_spi.h  mpu9250.c  mpu9250.h  mpu9250_i2c.c  mpu9250_i2c.h  qmc5883l.c  qmc5883l.h  sensor_calib.c  sensor_calib.h
components/nvs_helper/: CMakeLists.txt  nvs_helper.c  nvs_helper.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  imu_config.c  imu_config.h  imu_task.c  imu_task.h  list.h  mount.c  mount.h  web_server.c  web_server.h  wifi.c  wifi.h
web-front/: index.html  package-lock.json  package.json  vite.config.js
web-front/src/: App.vue  main.js
web-front/src/assets/: hardcore.css
web-front/src/components/: AccelCubeView.vue  Attitude3D.vue  CalibrationView.vue  CreditsView.vue  DashboardView.vue  GyroStillnessView.vue  MagCloudView.vue  PitchGauge.vue  RollGauge.vue  SettingsView.vue  YawGauge.vue
web-front/src/store/: imuStore.js
